--- a/Persistence/app/build.gradle
+++ b/Persistence/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.jakewharton:butterknife:8.5.1'
     apt 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.android.support:design:25.0.1'
 }
