--- a/Persistence/app/src/main/AndroidManifest.xml
+++ b/Persistence/app/src/main/AndroidManifest.xml
@@ -8,15 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:theme="@style/NoAinimationStyle.A">
+        <activity android:name=".MainActivity" android:theme="@style/NoAinimationStyle.A" />
+        <activity android:name=".activity.LoginActivity" android:theme="@style/NoAinimationStyle.A" />
+        <activity android:name=".activity.RegisterActivity" android:theme="@style/NoAinimationStyle.B" />
+        <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity" android:theme="@style/NoAinimationStyle.A" />
-        <activity android:name=".activity.RegisterActivity" android:theme="@style/NoAinimationStyle.B" />
     </application>
 
 </manifest>
